--- a/styles/main.css
+++ b/styles/main.css
@@ -17,6 +17,7 @@ body {
 .header {
     border-bottom: 1px solid #e5e5e5;
 }
+
 /* Make the masthead heading the same height as the navigation */
 .header h3 {
     margin-top: 0;
@@ -37,6 +38,7 @@ body {
     margin: 0 auto;
     max-width: 800px;
 }
+
 .container-narrow > hr {
     margin: 30px 0;
 }
@@ -52,6 +54,7 @@ body {
 .marketing {
     margin: 40px 0;
 }
+
 .marketing p + h4 {
     margin-top: 28px;
 }
@@ -65,10 +68,12 @@ body {
         padding-left: 0;
         padding-right: 0;
     }
+
     /* Space out the masthead */
     .header {
         margin-bottom: 30px;
     }
+
     /* Remove the bottom border on the jumbotron for visual effect */
     .jumbotron {
         border-bottom: 0;
@@ -77,4 +82,21 @@ body {
 
 .list-inline > li {
     vertical-align: middle;
+}
+
+.jumbotron .event-description {
+    text-align: left;
+    font-size: 15px;
+    padding-top: 20px;
+    font-weight: normal;
+}
+
+.blink {
+    animation: blinker 2s linear infinite;
+}
+
+@keyframes blinker {
+    50% {
+        opacity: 0.0;
+    }
 }
